Refactoring steps, moved logic from the views to the controller and created a isbirthday method in the Module

--- a/Views/happyb.erb
+++ b/Views/happyb.erb
@@ -4,9 +4,9 @@
     background-color: lightblue;
 }
 </style>
-<% if @day.to_i == Date.today.day && @month.to_i == Date.today.month %>
+<% if @isbirthday %>
 <h1>Happy birthday <%=@name %>!!<h1>
 <%else %>
-<h1><%=@name %> your birthday is in <%=@birthday.calculate(Date.new(2018,@month,@day)) %> days!!<h1>
+<h1><%=@name %> your birthday is in <%=@difference %> days!!<h1>
 <%end%>
 </center>
